--- a/css/style-about.css
+++ b/css/style-about.css
@@ -143,6 +143,7 @@ h6 {
   color: white;
   text-decoration: none;
   font-size: 18px;
+  transition: all 100ms ease-in-out;
 }
 
 .email-button:hover {
@@ -166,6 +167,7 @@ h6 {
   font-size: 24px;
   border: 2px solid var(--secondary-color);
   font-family: var(--heading-font-family);
+  transition: all 100ms ease-in-out;
 }
 
 .btn-project:hover {
@@ -181,6 +183,7 @@ h6 {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+  transition: all 100ms ease-in-out;
 }
 
 .btn-branding-outline:hover {
@@ -206,6 +209,7 @@ h4 {
   color: #272142;
   padding: 20px 0px;
   text-decoration: none;
+  transition: all 100ms ease-in-out;
 }
 
 .contact-menu:hover {
@@ -222,6 +226,7 @@ h4 {
   color: #272142;
   margin-top: 30px;
   text-decoration: none;
+  transition: all 100ms ease-in-out;
 }
 
 .menus:hover {
@@ -249,6 +254,7 @@ p {
   text-decoration: none;
   color: #272142;
   opacity: 60%;
+  transition: all 100ms ease-in-out;
 }
 
 .open-source-code:hover {
